--- a/0312-1.html
+++ b/0312-1.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <h1>容器</h1>
-    <biv class="container">
+    <biv class="container text-success">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
