--- a/20180319.html
+++ b/20180319.html
@@ -12,13 +12,8 @@
   </head>
   <body>
     <h1>20180319</h1>
-   <biv class="container"></biv>
-   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-   proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+   <biv class="container">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi repellat architecto fuga veritatis, tenetur sapiente nulla perferendis, alias voluptates recusandae fugiat iure aspernatur dolore aperiam rerum, necessitatibus odio, facilis iste.</biv>
+   
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
