--- a/index.html
+++ b/index.html
@@ -204,33 +204,24 @@
 
     <!-- Map -->
     <section id="contact" class="map">
-     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.728505028308!2d120.20901531551353!3d22.997008984965923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346e768c7e09958b%3A0x3079eb2363dc0258!2z6Ie65Y2X54Gr6LuK56uZKOWNl-ermSk!5e0!3m2!1szh-TW!2stw!4v1524472002445" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.728505028308!2d120.20901531551353!3d22.997008984965923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346e768c7e09958b%3A0x3079eb2363dc0258!2z6Ie65Y2X54Gr6LuK56uZKOWNl-ermSk!5e0!3m2!1szh-TW!2stw!4v1524472002445" width="100%" height="450s" frameborder="0" style="border:0" allowfullscreen></iframe>
     </section>
 
     <!-- Footer -->
-    <footer class="footer text-center">
-      <div class="container">
-        <ul class="list-inline mb-5">
-          <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3" href="#">
-              <i class="icon-social-facebook"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3" href="#">
-              <i class="icon-social-twitter"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white" href="#">
-              <i class="icon-social-github"></i>
-            </a>
-          </li>
-        </ul>
-        <p class="text-muted small mb-0">Copyright &copy; Your Website 2017</p>
+  
+<!-- Footer -->
+<footer class="footer text-center">
+  <div class="container">
+  <h2>聯絡我們</h2>
+    <div class="row">
+      <div class="col-sm-8 offset-sm-2">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdIJUQFDGJ_gyj7SUxnTsAjiCg4M38a5oIKAyRTHt3t9SckMQ/viewform?embedded=true" width="100%" height="1200" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
       </div>
-    </footer>
+    </div>
 
+    <p class="text-muted small mb-0">Copyright &copy; Your Website 2018</p>
+  </div>
+</footer>
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
       <i class="fa fa-angle-up"></i>
