--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav id="sidebar-wrapper">
       <ul class="sidebar-nav">
         <li class="sidebar-brand">
-          <a class="js-scroll-trigger" href="#page-top">新興國中</a>
+          <a class="js-scroll-trigger" href="#page-top">大港國小</a>
         </li>
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#page-top">首頁</a>
@@ -44,6 +44,9 @@
         </li>
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#portfolio">游泳</a>
+        </li>
+        <li class="sidebar-nav-item">
+          <a class="js-scroll-trigger" href="#map">電子地圖</a>
         </li>
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#contact">聯絡我們</a>
@@ -203,14 +206,14 @@
     </section>
 
     <!-- Map -->
-    <section id="contact" class="map">
-     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.728505028308!2d120.20901531551353!3d22.997008984965923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346e768c7e09958b%3A0x3079eb2363dc0258!2z6Ie65Y2X54Gr6LuK56uZKOWNl-ermSk!5e0!3m2!1szh-TW!2stw!4v1524472002445" width="100%" height="450s" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <section id="map" class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.287549109215!2d120.18682331551366!3d23.013211984957785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346e7645cf8985df%3A0x61b5553e8fb24204!2z5Y-w5Y2X5biC5YyX5Y2A5aSn5riv5ZyL5bCP!5e0!3m2!1szh-TW!2stw!4v1525681859273" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </section>
 
     <!-- Footer -->
   
 <!-- Footer -->
-<footer class="footer text-center">
+<footer id="contact" class="footer text-center">
   <div class="container">
   <h2>聯絡我們</h2>
     <div class="row">
