--- a/index.html
+++ b/index.html
@@ -13,25 +13,24 @@
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
  
-    <title>Bootstrap 離線版</title>
+    <title>入口網站</title>
   </head>
   <body>
  
-
 <div class="container my-5">
   <h1 class="text-center">入口網站</h1>
   <table class="table table-hover table-bordered">
     <thead>
       <tr>
         <th class="text-center" scope="col" style="width:10%">#</th>
-        <th class="text-center" scope="col" style="width:20%">網站名稱</th>
+        <th class="text-center" scope="col" style="width:20%">王鈺淨的入口網站</th>
         <th class="text-center" scope="col">網站</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <th class="text-center align-middle" scope="row">0</th>
-        <td class="text-center align-middle" >育將電腦工作室</td>
+        <td class="text-center align-middle" >王鈺淨的入口網站</td>
         <td class="text-center align-middle" >
           <a href="web/index.html" target="_blank">
             <img src="....">
@@ -41,25 +40,5 @@
     </tbody>
   </table>
 </div>
-  <table class="table table-hover table-bordered">
-   <thead>
-    <tr>
-      <th class="text-center" scope="col" style="width:10%">#</th>
-      <th class="text-center" scope="col" style="width:20%">網站名稱</th>
-      <th class="text-center" scope="col">網站</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th class="text-center align-middle" scope="row">0</th>
-      <td class="text-center align-middle" >xxx</td>
-      <td class="text-center align-middle" >
-        <a href="#" target="_blank">
-          <img src="....">
-        </a>
-      </td>
-    </tr> 
-  </tbody>
-</table>
   </body>
 </html>
