--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
  
 <div class="container my-5">
-  <h1 class="text-center">入口網站</h1>
+  <h1 class="text-center">網站</h1>
   <table class="table table-hover table-bordered">
     <thead>
       <tr>
