--- a/web/index.html
+++ b/web/index.html
@@ -144,23 +144,24 @@
     <section class="content-section" id="portfolio">
       <div class="container">
         <div class="content-section-heading text-center">
-          <h3 class="text-secondary mb-0">Portfolio</h3>
-          <h2 class="mb-5">Recent Projects</h2>
+          <h3 class="text-secondary mb-0">我們的作品</h3>
+          <h2 class="mb-5">2018</h2>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+            <a class="portfolio-item" href="http://www.mantorfoods.com" target= "_blank"=>
               <span class="caption">
                 <span class="caption-content">
-                  <h2>Stationary</h2>
-                  <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                  <h2>成為全球中華麵點食材製造供應商首選</h2>
+                  <p class="mb-0">持續成長、提升曼馱創造力、以及往更頂尖穩定的品質前進，將產能最大化與擴展至世界更多國家，
+                  進入國外主流市場，打造屬於每個人飲食習慣，不分國界、文化。</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+            <a class="portfolio-item" href="https://www.rong-guang.com/" target= "_blank"=>
               <span class="caption">
                 <span class="caption-content">
                   <h2>Ice Cream</h2>
@@ -168,10 +169,10 @@
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
+            <a class="portfolio-item" href="http://">
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
               <span class="caption">
                 <span class="caption-content">
                   <h2>Strawberries</h2>
