--- a/web/index.html
+++ b/web/index.html
@@ -132,10 +132,9 @@
     <!-- Callout -->
     <section class="callout">
       <div class="container text-center">
-        <h2 class="mx-auto mb-5">Welcome to
-          <em>your</em>
-          next website!</h2>
-        <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">Download Now!</a>
+        <h2 class="mx-auto mb-5">歡迎
+          <em>來到</em>大港國小</h2>
+        <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">大港國小</a>
       </div>
     </section>
 
@@ -163,12 +162,12 @@
             <a class="portfolio-item" href="https://www.rong-guang.com/" target= "_blank"=>
               <span class="caption">
                 <span class="caption-content">
-                  <h2>Ice Cream</h2>
-                  <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                  <h2>大港國小</h2>
+                  <p class="mb-0">大港國小網頁</p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
-            <a class="portfolio-item" href="http://">
+              <img class="img-fluid" src="img/20180604.jpg" alt="">
+            <a class="portfolio-item" href="http://web2.takes.tn.edu.tw/">
             </a>
           </div>
           <div class="col-lg-6">
