--- a/web/index.html
+++ b/web/index.html
@@ -167,7 +167,7 @@
                 </span>
               </span>
               <img class="img-fluid" src="img/20180604.jpg" alt="">
-            <a class="portfolio-item" href="http://web2.takes.tn.edu.tw/">
+            <a class="portfolio-item" href="http://web2.takes.tn.edu.tw/" target= "_blank"=>
             </a>
           </div>
           <div class="col-lg-6">
