--- a/web/index.html
+++ b/web/index.html
@@ -72,7 +72,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h2>認識我們</h2>
-            <p class="lead mb-5">地區特色<a href="https://unsplash.com/">Unsplash</a>!</p>
+            <p class="lead mb-5">地區特色<a href="https://unsplash.com/"></a>!</p>
             <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">介紹</a>
           </div>
         </div>
@@ -178,7 +178,7 @@
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
-            </a>
+            </a class="col-lg-6" href="http://web2.takes.tn.edu.tw/" target= "_blank"=>
           </div>
           <div class="col-lg-6">
             <a class="portfolio-item" href="#">
