--- a/web/index.html
+++ b/web/index.html
@@ -156,22 +156,21 @@
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
-            </a>
+            </a class="col-lg-6" href="http://web2.takes.tn.edu.tw/" target= "_blank"=>
+             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="https://www.rong-guang.com/" target= "_blank"=>
-              <span class="caption">
+               <span class="caption">
                 <span class="caption-content">
                   <h2>大港國小</h2>
                   <p class="mb-0">大港國小網頁</p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/1384615662-1786436632_l.jpg" alt="">
-            <a class="portfolio-item" href="http://web2.takes.tn.edu.tw/" target= "_blank"=>
-            </a>
+               </a class="col-lg-6" href="http://web2.takes.tn.edu.tw/" target= "_blank"=>
+             </a>
           </div>
           <div class="col-lg-6">
-              <span class="caption">
+               <span class="caption">
                 <span class="caption-content">
                   <h2>Strawberries</h2>
                   <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
